# rust-sitescraper

./: .gitignore  Cargo.toml  README.md
src/: http.rs  lib.rs  parse.rs
src/parse/: fetch.rs  structs.rs  text.rs
