[package]
name = "sitescraper"
version = "0.2.0"
edition = "2018"
authors = ["flopetautschnig (floscodes)"]
description = "Scraping Websites in Rust!"
keywords = ["webscraping", "scraping-tool", "html-parser", "webscrape", "parsing"]
categories = ["web-programming::http-client", "parsing", "parser-implementations", "web-programming"]
license = "MIT/Apache-2.0"
repository = "https://github.com/floscodes/rust-sitescraper"
readme = "README.md"

[dependencies]
reqwest = "0.11.4"
slicestring = "0.1.0"
